test/implicitDup13_7.slq
// args: --run

def foo(){
	x:=0:ğ”¹;
	if true{
		if true{
			if true{
				y:=dup(x);
			}
		}
	}
	x:=3; /// error
}
def main()â‡’foo;
